Fixes - user popup overlaps sidenav, ellipsis for username on sidenav, catalogue menu width (10px bigger on each side)

--- a/template/css/less/bootstrap-override.less
+++ b/template/css/less/bootstrap-override.less
@@ -323,3 +323,7 @@
     color: #fff;
   }
 }
+
+.text-overflow {
+  .text-overflow();
+}
