--- a/template/css/less/header.less
+++ b/template/css/less/header.less
@@ -172,6 +172,10 @@
 			}
 			
 			&__dropdown {
+      
+        .container-fluid {
+          width: 1180px !important;
+        }
 				
 				/*.i-fixed & {
 					position: fixed;
