--- a/template/css/less/materialize-override.less
+++ b/template/css/less/materialize-override.less
@@ -13,6 +13,7 @@
 
 .side-nav {
   background-color: #a3add7;
+  z-index: 1062;
   
   a {
     font-size: 10.5pt;
@@ -80,4 +81,9 @@
 
 #sidenav-overlay {
   background-color: rgba(255,255,255,0.5);
+  z-index: 1061;
+}
+
+.bj-side-nav-name {
+  width: 150px;
 }
